# application-inventory-service

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  SECURITY.md  ado_mobile_scanner.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  security.yml
application_inventory_service/: __main__.py
appsec_scan_router/: __init__.py  activity.py  aspm_cli.py  aspm_ingest.py  aspm_models.py  aspm_postgres.py  aspm_risk.py  auth.py  azure.py  cli.py  constants.py  detection.py  domains.py  entrypoint.py  github.py  inventory_exports.py  inventory_query.py  local_llm.py  metadata.py  models.py  observability.py  org_tokens.py  postgres.py  reports.py  runtime.py  scan_persistence.py  scan_request.py  scan_worker.py  scanner.py  scheduling.py  sdk.py  secure_store.py  source_access.py  source_discovery.py  store_lookup.py  target_filters.py  ui.py  utils.py
appsec_scan_router/ui_static/: app.js  aspm-ui.js  index.html  styles.css
docs/: APP_INTENT.md  ARCHITECTURE.md  ASPM_OPERATIONS.md  AWS_DEPLOYMENT.md  AZURE_IMPLEMENTATION.md  BLOG_POST.md  CODE_REFERENCE.md  GITHUB_SSO.md  PYPI_RELEASE_MANAGEMENT.md  SBOM.cdx.json  SBOM.md
mobile_scanner/: __init__.py
tests/: test_ado_mobile_scanner.py  test_aspm.py  test_aspm_cli.py  test_aspm_postgres_integration.py  test_domains.py  test_inventory_exports.py  test_inventory_query.py  test_local_llm.py  test_postgres_integration.py  test_runtime.py  test_scheduling.py  test_ui_static.py
